--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,16 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+    encoders:
+      AppBundle\Entity\Traveler:
+          algorithm: bcrypt
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        db_provider:
+          entity:
+            class: AppBundle:Traveler
+            property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -16,6 +21,10 @@ security:
         main:
             anonymous: ~
             # activate different ways to authenticate
+
+            form_login:
+              login_path: login
+              check_path: login
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
             #http_basic: ~
