--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -10,7 +10,8 @@ security:
         db_provider:
           entity:
             class: AppBundle:Traveler
-            property: username
+            # By commenting out the property we force it to use the Repository
+            # property: username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
