--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
+!/web/uploads/profile_pics
+/web/uploads/profile_pics/*
+!web/uploads/profile_pics/.gitkeep
 
 # Configuration files
 app/config/parameters.ini
