--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,6 +7,7 @@ imports:
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    profile_pictures_dir: '%kernel.project_dir%/web/uploads/profile_pics'
 
 framework:
     #esi: ~
