--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,6 +20,7 @@ security:
             security: false
 
         main:
+            logout_on_user_change: true
             anonymous: ~
             # activate different ways to authenticate
 
