Remove web server deprecation

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,4 @@ auth.json
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-
-###> symfony/web-server-bundle ###
-/.web-server-pid
-###< symfony/web-server-bundle ###
+.env
