--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "eightpoints/guzzle-bundle": "^8.0",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "4.4.*",
+        "symfony/cache": "4.4.*",
+        "symfony/config": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/expression-language": "4.4.*",
@@ -76,7 +78,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.0.*"
         }
     }
 }
